# DNSPilot

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  STATE.md  TODO.md  progress.md
apps/linux/DNSPilotLinux/: Cargo.toml
apps/linux/DNSPilotLinux/src/: app.rs  benchmark.rs  capabilities.rs  core_adapter.rs  detect.rs  diagnostics.rs  executable.rs  gui_main.rs  i18n.rs  lib.rs  main.rs  native_app.rs  native_helper_main.rs  native_power.rs  permissions.rs  preferences.rs  process.rs  profiles.rs  publish.rs  readiness.rs  result.rs  settings.rs  storage.rs  suites.rs  worker.rs
apps/linux/DNSPilotLinux/tests/: app_session_behaviour.rs  benchmark_runner_behaviour.rs  benchmark_worker_behaviour.rs  capability_behaviour.rs  cli_behaviour.rs  cli_product_behaviour.rs  core_adapter_behaviour.rs  detect_behaviour.rs  executable_behaviour.rs  i18n_permissions_native_behaviour.rs  native_helper_behaviour.rs  native_helper_protocol_behaviour.rs  native_power_behaviour.rs  packaging_policy_behaviour.rs  preferences_behaviour.rs  process_diagnostics_behaviour.rs  profile_storage_behaviour.rs  profiles_settings_suites_behaviour.rs  (+2 more)
crates/dnspilot-core/: Cargo.toml
crates/dnspilot-core/src/: connect_probe.rs  connection_path.rs  dns_benchmark.rs  dns_resolver.rs  dns_wire.rs  lib.rs  storage.rs  system_dns.rs  tls_probe.rs
crates/dnspilot-core/tests/: connect_probe_behaviour.rs  connection_path_behaviour.rs  core_behaviour.rs  dns_benchmark_behaviour.rs  dns_udp_resolver_behaviour.rs  dns_wire_behaviour.rs  storage_behaviour.rs  tls_probe_behaviour.rs
(+387 files in other folders)
