[package]
name = "dnspilot-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = "0.23.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
webpki-roots = "1.0.8"

[dev-dependencies]
rcgen = "0.14.8"
