[package]
name = "dnspilot-linux-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
name = "dnspilot_linux_shell"
path = "src/lib.rs"

[dependencies]
serde_json = "1"

[[bin]]
name = "dnspilot-linux-shell"
path = "src/main.rs"

[[bin]]
name = "dnspilot-native-helper"
path = "src/native_helper_main.rs"
